fix(options-tile): fix chevron styling on iOS Safari

--- a/packages/cloud-cognitive/src/components/OptionsTile/_options-tile.scss
+++ b/packages/cloud-cognitive/src/components/OptionsTile/_options-tile.scss
@@ -57,6 +57,10 @@
     transition: background-color $duration--fast-01 motion(entrance, productive);
   }
 
+  .#{$block-class}__header::-webkit-details-marker {
+    display: none;
+  }
+
   .#{$block-class}__header:hover {
     background-color: $hover-ui;
   }
@@ -119,6 +123,7 @@
   }
 
   .#{$block-class}__chevron {
+    display: block;
     justify-self: center;
     transition: transform $duration--fast-02 motion(standard, productive);
   }
